<?xml version="1.0"?>
<package>
  <name>gtec_uwb_ranging</name>
  <version>1.0.0</version>
  <description>The GTEC UWB ranging package</description>

  <maintainer email="valentin.barral@udc.es">valba</maintainer>


  <license>MIT</license>

  
  <build_depend>gtec_msgs</build_depend> 
  <run_depend>message_runtime</run_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
